--- a/content/index.yml
+++ b/content/index.yml
@@ -1,11 +1,11 @@
 seo:
-  title: "Emma Thompson - UX/UI Designer"
-  description: "Welcome to my portfolio! I'm Emma Thompson, a UX/UI designer and front-end developer based in Boston. I specialize in creating user-centered digital experiences that are both beautiful and functional."
-title: "Hey, I'm Emma Thompson UX/UI Designer"
-description: "I craft intuitive digital experiences where design meets functionality. Based in Boston, bringing ideas to life through code and creativity."
+  title: "Emma Thompson - Diseñadora UX/UI"
+  description: "¡Bienvenido a mi portfolio! Soy Emma Thompson, diseñadora UX/UI y desarrolladora front-end con base en Boston. Me especializo en crear experiencias digitales centradas en el usuario que son tanto hermosas como funcionales."
+title: "Hola, soy Emma Thompson Diseñadora UX/UI"
+description: "Creo experiencias digitales intuitivas donde el diseño se encuentra con la funcionalidad. Basada en Boston, dando vida a las ideas mediante código y creatividad."
 hero:
   links:
-    - label: "Use this template"
+    - label: "Usa esta plantilla"
       to: https://github.com/nuxt-ui-templates/portfolio
       color: "neutral"
   images:
@@ -28,28 +28,28 @@ hero:
     - src: /hero/random-9.avif
       alt: Random Image 9
 about:
-  title: "About Me"
+  title: "Sobre Mí"
   description: |
-    As a UX/UI designer and front-end developer with 6 years of experience, I leverage my Boston University Interactive Design degree to craft user-centered digital experiences.
-    My approach blends creative strategy with technical expertise, transforming concepts into functional, purposeful digital products that seamlessly integrate design and technology.
+    Como diseñadora UX/UI y desarrolladora front-end con 6 años de experiencia, aprovecho mi título en Diseño Interactivo de la Universidad de Boston para crear experiencias digitales centradas en el usuario.
+    Mi enfoque combina estrategia creativa con experiencia técnica, transformando conceptos en productos digitales funcionales y con propósito que integran diseño y tecnología de manera fluida.
 experience:
-  title: Work Experience
+  title: Experiencia Laboral
   items:
-    - position: "Brand Designer at"
-      date: "2023 - Present"
+    - position: "Diseñadora de Marca en"
+      date: "2023 - Presente"
       company:
         name: Nuxt
         logo: "i-simple-icons-nuxtdotjs"
         url: "https://nuxt.com"
         color: "#00DC82"
-    - position: "Assets Designer at"
+    - position: "Diseñadora de Assets en"
       date: "2022 - 2023"
       company:
         name: Raycast
         logo: "i-simple-icons-raycast"
         url: "https://raycast.com"
         color: "#FF6363"
-    - position: "Senior UX/UI Designer at"
+    - position: "Diseñadora UX/UI Senior en"
       date: "2020 - 2021"
       company:
         name: Linear
@@ -79,39 +79,39 @@ testimonials:
         src: 'https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=40&h=40&q=80'
         srcset: 'https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=80&h=80&q=80 2x'
 faq:
-  title: Frequently Asked Questions
-  description: Answers to common questions about my process and services.
+  title: Preguntas Frecuentes
+  description: Respuestas a preguntas comunes sobre mi proceso y servicios.
   categories:
-    - title: Services & Process
+    - title: Servicios y Proceso
       questions:
-        - label: What services do you offer?
+        - label: ¿Qué servicios ofreces?
           content: |
-            I specialize in UX/UI design and front-end development. This includes user research, wireframing, interactive prototyping, creating intuitive user interfaces, building responsive websites and web applications (especially with Vue.js/Nuxt.js), and developing design systems. My goal is to create seamless digital experiences from concept to deployment.
-        - label: What is your design process like?
+            Me especializo en diseño UX/UI y desarrollo front-end. Esto incluye investigación de usuarios, wireframing, prototipado interactivo, creación de interfaces de usuario intuitivas, construcción de sitios web y aplicaciones web responsive (especialmente con Vue.js/Nuxt.js), y desarrollo de sistemas de diseño. Mi objetivo es crear experiencias digitales fluidas desde el concepto hasta el despliegue.
+        - label: ¿Cómo es tu proceso de diseño?
           content: |
-            My process is collaborative and iterative, typically involving stages like Discovery & Research, Ideation & Prototyping, User Testing, Visual Design, and close collaboration with development teams during implementation. I tailor the process based on project needs, always focusing on user-centered solutions.
-        - label: Do you work with startups?
+            Mi proceso es colaborativo e iterativo, típicamente involucrando etapas como Descubrimiento e Investigación, Ideación y Prototipado, Pruebas de Usuario, Diseño Visual, y colaboración cercana con equipos de desarrollo durante la implementación. Adapto el proceso según las necesidades del proyecto, siempre enfocándome en soluciones centradas en el usuario.
+        - label: ¿Trabajas con startups?
           content: |
-            Absolutely! I enjoy working with startups to help shape their product vision and create user-friendly interfaces from the ground up. I can adapt my process to fit the fast-paced startup environment.
-    - title: Pricing & Timelines
+            ¡Por supuesto! Disfruto trabajar con startups para ayudar a dar forma a su visión de producto y crear interfaces fáciles de usar desde cero. Puedo adaptar mi proceso para ajustarse al entorno dinámico de las startups.
+    - title: Precios y Plazos
       questions:
-        - label: How much does a project typically cost?
+        - label: ¿Cuánto cuesta típicamente un proyecto?
           content: |
-            Project costs vary based on scope, complexity, features, and timeline. For comprehensive UX/UI design and front-end development projects, my engagements typically start around $5,000, with average projects ranging between $8,000 and $25,000. For consulting or specific design tasks, my day rate is $700.
-        - label: What are your payment terms?
+            Los costes del proyecto varían según el alcance, complejidad, características y plazos. Para proyectos completos de diseño UX/UI y desarrollo front-end, mis colaboraciones típicamente comienzan alrededor de $5,000, con proyectos promedio que oscilan entre $8,000 y $25,000. Para consultoría o tareas de diseño específicas, mi tarifa diaria es de $700.
+        - label: ¿Cuáles son tus condiciones de pago?
           content: |
-            I generally require a 40% deposit to schedule the project and begin work, with the remaining 60% due upon successful project completion and delivery. I accept payments via bank transfer and Stripe.
-        - label: How long does a typical project take?
+            Generalmente requiero un depósito del 40% para programar el proyecto y comenzar a trabajar, con el 60% restante pagadero al completar y entregar el proyecto con éxito. Acepto pagos mediante transferencia bancaria y Stripe.
+        - label: ¿Cuánto tiempo lleva típicamente un proyecto?
           content: |
-            Timelines depend heavily on the project's scope and complexity. Smaller projects might take 3-4 weeks, while larger, more involved projects can range from 2 to 4 months. I always provide a detailed timeline estimate after the initial discovery phase.
-        - label: Do you offer retainers or ongoing support?
+            Los plazos dependen en gran medida del alcance y complejidad del proyecto. Los proyectos más pequeños pueden llevar de 3 a 4 semanas, mientras que los proyectos más grandes y complejos pueden durar de 2 a 4 meses. Siempre proporciono una estimación detallada del cronograma después de la fase inicial de descubrimiento.
+        - label: ¿Ofreces contratos de mantenimiento o soporte continuo?
           content: |
-            Yes, for clients needing ongoing design support, feature development, or maintenance, I offer monthly retainer options tailored to specific needs. Let's discuss if this is something you're interested in.
-    - title: About Me
+            Sí, para clientes que necesitan soporte de diseño continuo, desarrollo de funcionalidades o mantenimiento, ofrezco opciones de contrato mensual adaptadas a necesidades específicas. Hablemos si esto es algo que te interesa.
+    - title: Sobre Mí
       questions:
-        - label: What do you enjoy most about your work?
+        - label: ¿Qué es lo que más disfrutas de tu trabajo?
           content: |
-            I love the challenge of solving complex problems through design and technology. It's incredibly rewarding to see people interact with something I've created and find it genuinely useful and easy to navigate. Bridging the gap between user needs and technical possibilities is what truly excites me.
-        - label: What are your hobbies outside of work?
+            Me encanta el desafío de resolver problemas complejos a través del diseño y la tecnología. Es increíblemente gratificante ver a las personas interactuar con algo que he creado y encontrarlo genuinamente útil y fácil de navegar. Cerrar la brecha entre las necesidades del usuario y las posibilidades técnicas es lo que realmente me emociona.
+        - label: ¿Cuáles son tus hobbies fuera del trabajo?
           content: |
-            When I'm not designing or coding, I enjoy exploring Boston's neighborhoods, trying out new coffee shops, and hiking in the nearby reservations. I'm also passionate about photography and occasionally contribute to open-source projects.
+            Cuando no estoy diseñando o programando, disfruto explorando los barrios de Boston, probando nuevas cafeterías y haciendo senderismo en las reservas cercanas. También me apasiona la fotografía y ocasionalmente contribuyo a proyectos de código abierto.
