--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@nuxt/ui": "4.1.0",
     "@nuxtjs/seo": "3.2.2",
     "@vercel/analytics": "1.6.1",
-    "@vercel/speed-insights": "^1.3.1",
+    "@vercel/speed-insights": "1.3.1",
     "@vueuse/motion": "2.2.6",
     "@vueuse/nuxt": "13.9.0",
     "better-sqlite3": "12.4.1",
