feat: eliminate email

--- a/content/index.yml
+++ b/content/index.yml
@@ -47,7 +47,7 @@ faq:
             Ofrecemos una amplia gama de servicios profesionales: corte de pelo para mujer, hombre y niños, coloración (tintes, mechas, balayage), tratamientos capilares intensivos, permanentes, alisados, peinados y recogidos para eventos especiales, manicura y cuidado de uñas. Todos nuestros servicios se personalizan según tus necesidades.
         - label: ¿Necesito pedir cita previa?
           content: |
-            Recomendamos pedir cita previa para asegurarte de que podemos atenderte en el horario que prefieras. Puedes llamarnos al 984 39 02 59, enviarnos un WhatsApp o usar nuestro formulario de contacto. También aceptamos clientes sin cita, aunque podrías tener que esperar.
+            Recomendamos pedir cita previa para asegurarte de que podemos atenderte en el horario que prefieras. Puedes llamarnos al 984 39 02 59. También aceptamos clientes sin cita, aunque podrías tener que esperar.
         - label: ¿Hacéis trabajos para bodas y eventos similares?
           content: |
             ¡Por supuesto! Somos especialistas en eventos especiales, especialmente bodas. Ofrecemos servicios de peinados y maquillaje tanto para la novia como para las invitadas. Además, disponemos de servicio a domicilio para realizar el trabajo en el lugar que prefieras, garantizando comodidad y profesionalidad en tu día especial. Contáctanos para planificar tu evento.
