feat: seo improvals

--- a/content/index.yml
+++ b/content/index.yml
@@ -1,6 +1,6 @@
 seo:
-  title: "Mimu's Estilistas - Peluquería en Pola de Siero"
-  description: "Peluquería profesional en Pola de Siero, Asturias. Corte, color, tratamientos capilares y mucho más. Más de 20 años de experiencia cuidando tu imagen."
+  title: "Peluquería en Pola de Siero"
+  description: "Peluquería en Pola de Siero, Asturias. Corte, color, tratamientos capilares y mucho más. Más de 20 años de experiencia cuidando tu imagen."
 title: "Bienvenido a Mimu's Estilistas"
 description: "Tu peluquería de confianza en Pola de Siero. Especialistas en corte, color y tratamientos capilares con un equipo profesional y cercano."
 hero:
