--- a/content/servicios.yml
+++ b/content/servicios.yml
@@ -1,5 +1,5 @@
 seo:
-  title: Servicios - Mimu's Estilistas
+  title: Servicios
   description: Descubre todos nuestros servicios profesionales de peluquería en Pola de Siero. Recogidos de novia, peinados, color, mechas y tratamientos.
 title: Nuestros Servicios
 description: Servicios profesionales adaptados a tus necesidades con productos de alta calidad
